tried adding img i made with paint

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,12 +1,47 @@
 <index.html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>All_About_A_Cajun</title>
+    </head>
+    <body>
+      <h1>Danielle "Dee" Morvant</h1>
+file:///C:/Users/danie/Desktop/CODEX%20PROJECTS/week-2%20code%20labs/All_About_A_Cajun-1/Iberia_Parish_Attractions.jpg
+      <p>
+        My name is Danielle Morvant, I am 39, my peers have often referred to me
+        as "Dee", and my many nieces and nephews call me Dee Dee. I am currently
+        mama to a very spoiled 10 yr old chihuahua and a just as spoiled 1 1/2
+        yr old cat. They are currently the highlight of my day being out of work
+        currently on maternity leave. I don't currently have children and so
+        Baby Girl will probably be spoiled. I look forward to starting this new
+        chapter in my life as I've always cared for my nieces, nephews, and a
+        much younger sibling as if they were my own.
+      </p>
+      <ul>
+        These are a few of my favorite things.....
+        <li>Crawfish Boudin</li>
+        <li>Gumbo</li>
+        <li>Bon Fires</li>
+        <li>Mojitos and Margaritas</li>
+        <li>Gardens</li>
+        <li>PC Games like "Stray" and "COD"</li>
+        <li>Family Bible</li>
+        <li>Guns</li>
+      </ul>
+      <ol>
+        These are a few of my favorite activities....
+        <li>Gardening</li>
+        <li>Target Practice</li>
+        <li>Canoeing</li>
+        <li>Fishing</li>
+        <li>Crocheting</li>
+        <li>Sewing</li>
+        <li>Drawing</li>
+        <li>Gaming</li>
+      </ol>
+      <a href="https://github.com/Danielle-design-art">Danielle Morvant</a>
+    </body>
+  </html>
+</index.html>
