--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,8 +8,7 @@
     </head>
     <body>
       <h1>Danielle "Dee" Morvant</h1>
-file:///C:/Users/danie/Desktop/CODEX%20PROJECTS/week-2%20code%20labs/All_About_A_Cajun-1/Iberia_Parish_Attractions.jpg
-      <p>
+ <img " style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;src="file:///C:/Users/danie/Desktop/CODEX%20PROJECTS/week-2%20code%20labs/All_About_A_Cajun-1/Iberia_Parish_Attractions.jpg" width="919" height="351"><br>
         My name is Danielle Morvant, I am 39, my peers have often referred to me
         as "Dee", and my many nieces and nephews call me Dee Dee. I am currently
         mama to a very spoiled 10 yr old chihuahua and a just as spoiled 1 1/2
