--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,40 +7,68 @@
       <title>All_About_A_Cajun</title>
     </head>
     <body>
-      <h1>Danielle "Dee" Morvant</h1>
- <img " style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;src="file:///C:/Users/danie/Desktop/CODEX%20PROJECTS/week-2%20code%20labs/All_About_A_Cajun-1/Iberia_Parish_Attractions.jpg" width="919" height="351"><br>
-        My name is Danielle Morvant, I am 39, my peers have often referred to me
-        as "Dee", and my many nieces and nephews call me Dee Dee. I am currently
-        mama to a very spoiled 10 yr old chihuahua and a just as spoiled 1 1/2
-        yr old cat. They are currently the highlight of my day being out of work
-        currently on maternity leave. I don't currently have children and so
-        Baby Girl will probably be spoiled. I look forward to starting this new
-        chapter in my life as I've always cared for my nieces, nephews, and a
-        much younger sibling as if they were my own.
-      </p>
-      <ul>
-        These are a few of my favorite things.....
-        <li>Crawfish Boudin</li>
-        <li>Gumbo</li>
-        <li>Bon Fires</li>
-        <li>Mojitos and Margaritas</li>
-        <li>Gardens</li>
-        <li>PC Games like "Stray" and "COD"</li>
-        <li>Family Bible</li>
-        <li>Guns</li>
-      </ul>
-      <ol>
-        These are a few of my favorite activities....
-        <li>Gardening</li>
-        <li>Target Practice</li>
-        <li>Canoeing</li>
-        <li>Fishing</li>
-        <li>Crocheting</li>
-        <li>Sewing</li>
-        <li>Drawing</li>
-        <li>Gaming</li>
-      </ol>
-      <a href="https://github.com/Danielle-design-art">Danielle Morvant</a>
+      <h1 style="background-color: rgba(92, 24, 180, 0.89)">
+        Danielle "Dee" Morvant
+      </h1>
+      <img src="Iberia_Parish_Attractions.jpg" alt="" />
+      <h2>
+        <p style="background-color: rgba(236, 221, 8, 0.986)">
+          My name is Danielle Morvant (friends and family call me Dee) and I am
+          a New Iberia Louisiana native. I am expecting my firstborn at age 39,
+          I do not have any other children since my only other pregnancy
+          resulted in a miscarriage. I have lots of nieces and nephews, whom
+          call me 'Dee Dee.' I have always been very proud as an aunt of the
+          things they accomplished and the young adults they've become. I have 3
+          siblings...all being brothers. I love all things outdoors...four
+          wheelers, planting things, and especially love our rainy Louisiana
+          Nights. I may not be the best cook, but I definitely love to cook as
+          much as I love food. My oldest brother inspired me at a young age to
+          draw and I love it still today.
+        </p>
+      </h2>
+      <h3>
+        <ul style="background-color: rgb(92, 24, 180, 0.89)">
+          <span style="font-size: 100px">&#128010;</span
+          ><span style="font-size: 100px">&#129424;</span
+          ><span style="font-size: 100px">&#129408;</span
+          ><br />
+          <u>These are a few of my favorite things.....</u>
+          <li>Fried Alligator Bites</li>
+          <li>Crawfish Boil, Shrimp Boil, & Crab Boil</li>
+          <li>Gumbo</li>
+          <li>Fried Catfish</li>
+          <li>Bon Fires</li>
+          <li>Mojitos and Margaritas</li>
+          <li>Gardens</li>
+          <li>PC Games like "Stray" and "COD"</li>
+          <li>Family Bible</li>
+          <li>Guns</li>
+          <li>Louisiana</li>
+        </ul>
+        <ol style="background-color: rgba(236, 221, 8, 0.986)">
+          <span style="font-size: 100px">&#127907;</span
+          ><span style="font-size: 100px">&#127918;</span
+          ><span style="font-size: 100px">&#127919;</span
+          ><br />
+          These are a few of my favorite activities....
+          <li>Crocheting</li>
+          <li>Gardening</li>
+          <li>Target Practice</li>
+          <li>Canoeing</li>
+          <li>Fishing</li>
+          <li>Listening to crickets & frogs at night</li>
+          <li>Sewing</li>
+          <li>Drawing</li>
+          <li>Gaming</li>
+        </ol> </h3>
+        <h1 style="background-color: rgba(92, 24, 180, 0.89)">
+          Danielle Morvant Github link>>>
+          <a href="https://github.com/Danielle-design-art"
+          text=color:rgba(236, 221, 8, 0.986);"Danielle Morvant github link">HERE</a><<<<br>
+          &#169;Danielle-design-art_2025
+        </h1>
+        
+     
     </body>
   </html>
 </index.html>
