--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,6 +4,11 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <nav>
+        <a href="index.html">Home</a> |
+        <a href="hobbies.html">Hobbies</a> |
+        <a href="contact.html">Contact</a>
+      </nav>
       <title>All_About_A_Cajun</title>
     </head>
     <body>
