--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,7 +8,7 @@
     </head>
     <body> 
       <nav>
-      <a href="index.html">Home</a> |
+      <a href="Untitled-1.html">Home</a> |
       <a href="hobbies.html">Hobbies</a> |
       <a href="contact.html">Contact</a>
     </nav>
