--- a/Hobbies.html
+++ b/Hobbies.html
@@ -12,21 +12,22 @@
       <title>What I'm Usually Up To</title>
 </head>
 <body>
-    <ol style="background-color: rgba(236, 221, 8, 0.986)">
+    <ol style="background-color: rgba(112, 196, 177, 0.986)">
+        <h1>Fun Stuff To Do</h1>
         <span style="font-size: 100px">&#127907;</span
         ><span style="font-size: 100px">&#127918;</span
         ><span style="font-size: 100px">&#127919;</span
         ><br />
         These are a few of my favorite activities....
-        <li>Crocheting</li>
-        <li>Gardening</li>
-        <li>Target Practice</li>
-        <li>Canoeing</li>
-        <li>Fishing</li>
-        <li>Listening to crickets & frogs at night</li>
-        <li>Sewing</li>
-        <li>Drawing</li>
-        <li>Gaming</li>
+        <li><u>Crocheting</u>-I taught myself crochet as a way of remembering my Mama who passed in 2005</li>
+        <li><u>Gardening</u>-South Louisiana makes a great environment to grow all sorts of plants</li>
+        <li><u>Target Practice</u>-My first target practice lesson was by my dad by way of archery</li>
+        <li><u>Canoeing & Boating</u>-My dad took us all along the Bayou Teche by boat</li>
+        <li><u>Fishing</u>-I don't do it as often as I used to</li>
+        <li><u>Listening to crickets & frogs at night</u></li>
+        <li><u>Sewing</u>-My mom started an at home business as a seamstress</li>
+        <li><u>Drawing</u>-This was inspired by my oldest brother</li>
+        <li><u>Gaming</u>-I have a steam,xbox, and discord account. Still learning Discord.</li>
       </ol> </h3> 
     </body>
 </html>
