--- a/Hobbies.html
+++ b/Hobbies.html
@@ -18,7 +18,7 @@
         ><span style="font-size: 100px">&#127918;</span
         ><span style="font-size: 100px">&#127919;</span
         ><br />
-        These are a few of my favorite activities....
+        <h2>These are a few of my favorite activities....
         <li><u>Crocheting</u>-I taught myself crochet as a way of remembering my Mama who passed in 2005</li>
         <li><u>Gardening</u>-South Louisiana makes a great environment to grow all sorts of plants</li>
         <li><u>Target Practice</u>-My first target practice lesson was by my dad by way of archery</li>
@@ -28,6 +28,6 @@
         <li><u>Sewing</u>-My mom started an at home business as a seamstress</li>
         <li><u>Drawing</u>-This was inspired by my oldest brother</li>
         <li><u>Gaming</u>-I have a steam,xbox, and discord account. Still learning Discord.</li>
-      </ol> </h3> 
+      </ol> </h2>
     </body>
 </html>
