--- a/Hobbies.html
+++ b/Hobbies.html
@@ -24,7 +24,7 @@
         <li><u>Target Practice</u>-My first target practice lesson was by my dad by way of archery</li>
         <li><u>Canoeing & Boating</u>-My dad took us all along the Bayou Teche by boat</li>
         <li><u>Fishing</u>-I don't do it as often as I used to</li>
-        <li><u>Listening to crickets & frogs at night</u></li>
+        <li><u>Listening to crickets & frogs at night</u>-Favorite part of camping</li>
         <li><u>Sewing</u>-My mom started an at home business as a seamstress</li>
         <li><u>Drawing</u>-This was inspired by my oldest brother</li>
         <li><u>Gaming</u>-I have a steam,xbox, and discord account. Still learning Discord.</li>
