added text and style to all 3 pages

--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <nav>
+    <nav style="background-color: rgba(92, 24, 180, 0.89)">
         <a href="Untitled-1.html">Home</a> |
         <a href="hobbies.html">Hobbies</a> |
         <a href="contact.html">Contact</a>
@@ -12,7 +12,11 @@
       <title>Document</title>
 </head>
 <body>
-    <p style="background-color:Tomato;" <h1> Ways to contact me</h1></p>
-    
+    <ul style="background-color: rgba(236, 221, 8, 0.986)">
+     <h1>Contact me @....</h1>
+      <h3><li>daniellemorvant1@gmail.com</li>
+      <li><a href="https://github.com/Danielle-design-art";"Danielle Morvant github link">GitHub</a> Danielle-design-art_2025</li>
+      <li>Discord...email me at GMail for details</li></h3>
+</ul>
 </body>
 </html>
