--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <nav>
+    <nav style="background-color: rgba(4, 114, 19, 0.986)">
         <a href="Untitled-1.html">Home</a> |
         <a href="hobbies.html">Hobbies</a> |
         <a href="contact.html">Contact</a>
@@ -12,7 +12,7 @@
       <title>What I'm Usually Up To</title>
 </head>
 <body>
-    <ol style="background-color: rgba(112, 196, 177, 0.986)">
+    <ol style="background-color: rgb(92, 24, 180, 0.89)">
         <h1>Fun Stuff To Do</h1>
         <span style="font-size: 100px">&#127907;</span
         ><span style="font-size: 100px">&#127918;</span
