--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,7 +7,7 @@
       <title>All_About_A_Cajun</title>
     </head>
     <body> 
-      <nav>
+      <nav style="background-color: rgba(236, 221, 8, 0.986)">
       <a href="Untitled-1.html">Home</a> |
       <a href="hobbies.html">Hobbies</a> |
       <a href="contact.html">Contact</a>
